// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoviePage component should be rendered with default props 1`] = `
<Fragment>
  <Movie
    overview=""
    poster_path=""
    release_date=""
    runtime={0}
    tagline=""
    title=""
    vote_average={0}
  />
  <div
    className="search-description__wrapper"
  >
    <p
      className="movie-page__results-description"
    >
      Films by undefined genre
    </p>
  </div>
  <Connect(ResultsList) />
</Fragment>
`;

exports[`MoviePage component should be rendered with selectedMovie 1`] = `
<Fragment>
  <Movie
    genres={
      Array [
        "a",
      ]
    }
    overview=""
    poster_path=""
    release_date=""
    runtime={0}
    tagline=""
    title=""
    vote_average={0}
  />
  <div
    className="search-description__wrapper"
  >
    <p
      className="movie-page__results-description"
    >
      Films by a genre
    </p>
  </div>
  <Connect(ResultsList) />
</Fragment>
`;
